--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "dependencies": {
     "@actions/core": "^1.2.0",
-    "@actions/io": "^1.0.1",
-    "@actions/tool-cache": "^1.1.2"
+    "@actions/io": "^1.1.0",
+    "@actions/tool-cache": "^1.6.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.7",
-    "@zeit/ncc": "^0.20.5",
-    "jest": "^24.9.0",
-    "prettier": "^1.19.1",
-    "ts-jest": "^24.1.0",
-    "typescript": "^3.7.2"
+    "@vercel/ncc": "^0.28.5",
+    "jest": "^26.6.0",
+    "prettier": "^2.3.0",
+    "ts-jest": "^26.5.0",
+    "typescript": "^4.1.0"
   }
 }
